8671 - fixed the z-index situation for the dropdowns; but now the buttons stay the same size at mobile, so , wip

--- a/src/_scss/pages/homepage/features/_dropdown.scss
+++ b/src/_scss/pages/homepage/features/_dropdown.scss
@@ -32,6 +32,7 @@
             position: absolute;
             left: 0;
             right: 0;
+            z-index: 1;
             @include unstyled-list;
             background-color: $color-white;
             border: 1px solid $color-gray;
