--- a/src/_scss/pages/homepageUpdate/homepageUpdate.scss
+++ b/src/_scss/pages/homepageUpdate/homepageUpdate.scss
@@ -9,7 +9,6 @@
     .homepage-getting-started {
       height: 100%;
       padding-bottom: $global-padding * 12;
-      overflow: hidden;
       .homepage-background-flair {
           position: absolute;
           top: 5rem;
